--- a/rportfolio/src/components/intro/intro.css
+++ b/rportfolio/src/components/intro/intro.css
@@ -11,3 +11,41 @@
 .introRight{
     flex:1;
 }
+
+.introLeft{
+    padding: 50px;
+}
+
+.name{
+    font-size: 60px;
+}
+
+.introTitle{
+    line-height: 50px;
+    height: 50px;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    background-color: aliceblue;
+}
+
+.introTitleContainer{
+    height: 100%;
+    animation: move 10s ease-in-out infinite alternate;
+}
+
+@keyframes move {
+    35% {
+        transform: translateY(-50px);
+    }
+
+    70% {
+        transform: translateY(-100px);
+    }
+    
+    100% {
+        transform: translateY(-150px);
+    }
+    
+}
