--- a/rportfolio/src/components/intro/intro.css
+++ b/rportfolio/src/components/intro/intro.css
@@ -1,11 +1,12 @@
 .intro{
     display: flex;
     height: 100vh;
-    background-color: aquamarine;
 }
 
 .introLeft{
     flex: 2;
+    display: flex;
+    align-items: center;
 }
 
 .introRight{
@@ -16,9 +17,21 @@
     padding: 50px;
 }
 
+.name-container{
+    padding: 50px;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .name{
     font-size: 60px;
+    font-weight: bolder;
+    font-family:'Montserrat', sans-serif;
+
 }
+
 
 .introTitle{
     line-height: 50px;
@@ -27,12 +40,14 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-    background-color: aliceblue;
+    font-family:'Montserrat', sans-serif;
+
 }
 
 .introTitleContainer{
     height: 100%;
     animation: move 10s ease-in-out infinite alternate;
+    font-family:'Montserrat', sans-serif;
 }
 
 @keyframes move {
@@ -49,3 +64,9 @@
     }
     
 }
+
+.introImage{
+    height: 100%;
+    object-fit: cover;
+}
+
