--- a/rportfolio/src/components/intro/intro.css
+++ b/rportfolio/src/components/intro/intro.css
@@ -4,22 +4,20 @@
 }
 
 .introLeft{
-    flex: 2;
+    flex: 1;
     display: flex;
     align-items: center;
+    justify-content: space-around;
 }
 
 .introRight{
     flex:1;
-}
-
-.introLeft{
-    padding: 50px;
+    position: relative;
 }
 
 .name-container{
     padding: 50px;
-    height: 75%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -27,9 +25,8 @@
 
 .name{
     font-size: 60px;
-    font-weight: bolder;
+    font-weight: 900;
     font-family:'Montserrat', sans-serif;
-
 }
 
 
@@ -48,13 +45,14 @@
     height: 100%;
     animation: move 10s ease-in-out infinite alternate;
     font-family:'Montserrat', sans-serif;
+    font-weight: 600;
+    color: rgb(143, 54, 143);
 }
 
 @keyframes move {
     35% {
         transform: translateY(-50px);
     }
-
     70% {
         transform: translateY(-100px);
     }
@@ -62,11 +60,29 @@
     100% {
         transform: translateY(-150px);
     }
-    
-}
 
-.introImage{
+}
+ .introImage{
     height: 100%;
     object-fit: cover;
+    position: absolute;
+ }
+
+.introScroll{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: 20px;
 }
 
+.introBg{
+    -webkit-clip-path: polygon(100% 0%, 100% 68%, 100% 100%, 25% 100%, 0 75%, 25% 0%);
+    clip-path: polygon(100% 0%, 100% 68%, 100% 100%, 25% 100%, 0 75%, 25% 0%);
+     background-color: rgb(143, 54, 143);
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     right:0 ;
+
+} 
