--- a/rportfolio/src/components/nav/nav.css
+++ b/rportfolio/src/components/nav/nav.css
@@ -2,11 +2,29 @@
     display: flex;
     flex-direction: row;
     height: 70px;
+    background-color: rgb(197, 173, 219);
+    align-items: center;
+    cursor: pointer;
 }
 
 .NavLeft{
     flex:1;
 }
+
+.logo{
+    font-family: "Dancing Script", sans-serif;
+    font-size: 30px;
+    padding-left: 20px;
+    background-color: rgb(118, 4, 130);
+    color: rgb(197, 173, 219);
+    border-radius: 50%;
+    width: 20%;
+    padding: 8px;
+    text-align: center;
+}
+
+
+
 
 .navRight{
     flex: 1;
@@ -16,3 +34,4 @@
     font-family:'Montserrat', sans-serif;
     font-weight: 600;
 }
+
