--- a/rportfolio/src/components/skills/skills.css
+++ b/rportfolio/src/components/skills/skills.css
@@ -5,6 +5,7 @@
     border: 2px solid rgb(118, 4, 130);
     border-radius: 10px 10px 0px 0px;
     overflow: hidden;
+    position: relative;
 }
 
 .window{
@@ -12,7 +13,9 @@
     display: flex;
     align-items: center;
     background-color: rgb(243, 242, 242);
-}
+    position: sticky;
+    z-index: 1;
+    }
 
 .circle{
     width: 6px;
@@ -25,5 +28,9 @@
 
 .SkillsImg{
     width: 100%;
-    height: 100%;
+    transition: all 10s ease;
+}
+
+.Skills:hover .SkillsImg{
+    transform: translateY(-100%);
 }
