--- a/rportfolio/src/components/intro/intro.css
+++ b/rportfolio/src/components/intro/intro.css
@@ -96,5 +96,23 @@
      position: absolute;
      top: 0;
      right:0 ;
-
 } 
+
+@media  screen and (max-width: 480px) {
+    .intro{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .name-container{
+        padding: 10px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        height: 100%;
+    }
+    .introDescription{
+        display: none;
+    }
+
+}
