--- a/rportfolio/src/components/contact/contact.css
+++ b/rportfolio/src/components/contact/contact.css
@@ -87,3 +87,15 @@ textarea{
     color:rgb(227, 161, 235) ;
     background-color: rgb(118, 4, 130);
 }
+
+@media  screen and (max-width: 480px) {
+    .ContactContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+}
