--- a/rportfolio/src/components/skillsList/skillsList.css
+++ b/rportfolio/src/components/skillsList/skillsList.css
@@ -34,3 +34,15 @@
     justify-content: space-between;
     width: 100%;
 }
+
+@media  screen and (max-width: 480px) {
+    .SkillsList{
+        padding: 10px;
+    }
+
+    .SkillsListText{
+        width: 100%;
+    }
+    
+
+}
