--- a/rportfolio/src/components/contact/contact.css
+++ b/rportfolio/src/components/contact/contact.css
@@ -97,5 +97,10 @@ textarea{
         justify-content: center;
         text-align: center;
     }
+
+    .ContactInfoItem{
+       font-size:20px;
+       margin: 30px 0px;
+    }
     
 }
