--- a/rportfolio/src/components/contact/contact.css
+++ b/rportfolio/src/components/contact/contact.css
@@ -88,14 +88,12 @@ textarea{
     background-color: rgb(118, 4, 130);
 }
 
-@media  screen and (max-width: 480px) {
+@media  screen and (max-width: 769px) {
     .ContactContainer{
+        width: 89vw;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-        text-align: center;
+        text-align: center; 
     }
 
     .ContactInfoItem{
@@ -103,4 +101,8 @@ textarea{
        margin: 30px 0px;
     }
     
+    .ContactTitle{
+        width: 80vw;
+        text-align: center;
+    }
 }
