--- a/rportfolio/src/components/intro/intro.css
+++ b/rportfolio/src/components/intro/intro.css
@@ -110,6 +110,7 @@
         text-align: center;
         justify-content: center;
         height: 100%;
+        font-weight: 600;
     }
     .introDescription{
         width: 50vw;
