--- a/rportfolio/src/components/toggle/toggle.css
+++ b/rportfolio/src/components/toggle/toggle.css
@@ -27,3 +27,36 @@
     position: absolute;
     cursor: pointer;
 }
+
+@media  screen and (max-width: 769px) {
+    .Toggle{
+        width: 40px;
+        height: 20px;
+        border-radius: 18px;
+        border: 1px solid #999;
+        background-color: white;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        z-index: 999;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    
+    }
+
+    .ToggleIcon{
+        width: 10px;
+        height: 15px;
+    }
+
+    
+    .Togglebtn{
+        width: 40%;
+        height: 80%;
+        border-radius: 50%;
+        background-color: #999;
+        position: absolute;
+        cursor: pointer;
+    }
+}
