--- a/rportfolio/src/pages/shared/shared.css
+++ b/rportfolio/src/pages/shared/shared.css
@@ -15,15 +15,13 @@
     .Shared{
         height: 100vh;
         width: 100%; 
-        display: flex;
-        justify-content: center;
     }
     
     
     .SharedIframe{
         height: 100%;
-        width: 50%; 
-        
+        width: 100%; 
+        padding: 0px;
     }
     
 }
